prevent double tap zoom on mobile

--- a/index.sass
+++ b/index.sass
@@ -22,7 +22,7 @@ $key-color-absent: #787c7e
 body
   width: 100vw
   height: 100vh
-
+  touch-action: manipulation
   display: flex
   flex-direction: column
   justify-content: center
